--- a/Section 6 - CSS/style.css
+++ b/Section 6 - CSS/style.css
@@ -1,3 +1,18 @@
 h2 {
     background-color: pink;
+    text-align: center;
+    border: 5px solid purple;
+    cursor: pointer;
+}
+
+li {
+    list-style: none;
+    display: inline-block;
+}
+body {
+    background-image: url("images/background.jpg");
+    background-size: cover;
+}
+p {
+    background-color: blanchedalmond;
 }
